<?xml version="1.0" encoding="utf-8"?>

<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="match_parent"
          android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_from_to_lbl"
                android:id="@+id/flight_from_to_lbl"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_from_city"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_to_city"
                android:layout_column="2"
                android:padding="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_date_lbl"
                android:id="@+id/flight_date_lbl"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_from_date"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_to_date"
                android:padding="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_time_lbl"
                android:id="@+id/flight_time_lbl"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_from_time"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_to_time"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_duration"
                android:padding="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_carrier_lbl"
                android:id="@+id/flight_carrier_lbl"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_carrier"
                android:padding="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_number_lbl"
                android:id="@+id/flight_number_lbl"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_number"
                android:padding="2dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_eq_lbl"
                android:id="@+id/flight_eq_lbl"
                android:singleLine="false"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_eq"
                android:padding="2dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flight_price_lbl"
                android:id="@+id/flight_price_lbl"
                android:gravity="right"
                android:focusable="false"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/flight_price"
                android:padding="2dp"/>
        </TableRow>

    </TableLayout>
</TableRow>